[FIX] Sentry module Java 8